@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-08-29T16:08:32Z",
+  "timestamp" : "2022-08-30T08:09:38Z",
   "count_outdated" : 46,
   "uniques_outdated" : 16,
-  "count" : 54,
-  "uniques" : 21,
+  "count" : 53,
+  "uniques" : 20,
   "views" : [
     {
       "timestamp": "2022-08-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
