@@ -1,11 +1,11 @@
 {
-  "count": 8,
-  "uniques": 5,
+  "count": 7,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-08-16T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-08-24T00:00:00Z",
